--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
-                            <img src="The purpose of our website is that people can access the best soccer information easily and that it is attractive. We address men and women who are over 15 years old and like soccer and want to have all the news at.jpg" class="d-block w-100" alt="..." 
+                            <img src="THEPUR~1.JPG" class="d-block w-100" alt="..." 
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
