--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
-                            <img src="THEPUR~1.JPG" class="d-block w-100" alt="..." 
+                            <img src="Objective.jpg" class="d-block w-100" alt="..." 
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
