--- a/Page 2.html
+++ b/Page 2.html
@@ -7,6 +7,7 @@
     <title>Kick Off</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png"/>
 
 </head>
 <body>
