--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <title>HOME</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-     <link rel="icon" type="image/png" href="favicon-32x32.png"/>
-
+    <link rel="icon" type="image/png" href="favicon-32x32.png"/>
+         <!--Iconos-->
+         <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -33,9 +34,9 @@
         </div>
         <a href="index.html"> <img src="./Logo.png" alt=""></a>
         <div class="navegador">
-            <a href="Noticias.html">NOTICIAS</a>
-            <a href="Momentos destacados.html">MOMENTOS HISTORICOS</a>
-            <a href="https://www.espn.com.mx/futbol/resultados/_/liga/todo">RESULTADOS Y CALENDARIO</a>
+            <a href="Noticias.html">NEWS</a>
+            <a href="Momentos destacados.html">HISTORIC MOMENTS</a>
+            <a href="https://www.espn.com.mx/futbol/resultados/_/liga/todo">RESULTS AND CALENDAR</a>
             <a href="Premier.html">PREMIER LEAGUE</a>
             <a href="La Liga.html">LA LIGA</a>
             <a href="Ligue 1.html">LIGUE 1</a>
@@ -73,7 +74,7 @@
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
-                            <img src="Objective.jpg" class="d-block w-100" alt="..." 
+                            <img src="Objective.jpg".jpg" class="d-block w-100" alt="..." 
                             width="620px" height="450px">
                         </div>
                         <div class="carousel-item">
@@ -120,6 +121,36 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
+
+    <!--::::Pie de Pagina::::::-->
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="index.html">
+                        <img src="Logo.png" alt="Logo de SLee Dw">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>ABOUT US</h2>
+                <p>We are KickOff the most complet website of sports news</p>
+                <p>de todas </p>
+            </div>
+            <div class="box">
+                <h2>FOLLOW US</h2>
+                <div class="red-social">
+                    <a href="https://www.facebook.com/profile.php?id=100092362721826" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/kickoffwebpage/" class="fa fa-instagram"></a>
+                    <a href="https://twitter.com/KickOwebpage" class="fa fa-twitter"></a>
+                    <a href="https://www.youtube.com/channel/UCWe1DGxcLtu-8vd9nOuQ2fQ" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>KickOff</b> - Copyright.</small>
+        </div>
+    </footer>
 </body>
 </html>
 
