--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="box">
                 <h2>ABOUT US</h2>
-                <p>We are KickOff the most complet website of sports news</p>
+                    <p>We are KickOff the most complete website of sports news</p>
                 <p></p>
             </div>
             <div class="box">
